<resources>
    <string name="app_name">Dictionary App</string>

    <string-array name="words">
        <item>Henrik</item>
        <item>Meea</item>
        <item>Fibi</item>
    </string-array>
    <string name="new_word">Type in a new word</string>
    <string name="new_definition">Type in a new definition</string>
    <string name="add">Add Word</string>
    <string name="dictionary_text">Ordbook</string>
    <string name="hint_word">Skriv inn et ord</string>
    <string name="hint_description">Skriv inn en definisjon</string>
</resources>
