<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddWordActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="100sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_word"
            android:ems="10"
            android:id="@+id/word_text"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_description"
            android:ems="10"
            android:id="@+id/definition_text"
    />

    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_to_dictionary"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:onClick="addNewWord"
    />
</LinearLayout>