<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartScreenActivity"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="40sp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/dictionary_text"
                android:onClick="getFullDictionary"
                android:layout_marginEnd="20sp"
                android:textColor="#ffffff"
                tools:ignore="ButtonStyle"
        />

        <Button
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:onClick="addNewWord"
                tools:ignore="ButtonStyle"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10sp">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="Play Game"
                android:onClick="startGame"
                android:textColor="#ffffff"
                android:layout_marginStart="45sp"
                android:layout_marginEnd="45sp"
                tools:ignore="ButtonStyle"
        />

    </LinearLayout>
</LinearLayout>